--- a/04_Shop_multiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
@@ -13,27 +13,27 @@
 }
 <div class="column col-xs-12 col-sm-3" id="left_column">
     <!-- Blog category -->
-    @if (categoryList!=null && categoryList.Count > 0)
+    @if (categoryList != null && categoryList.Count > 0)
     {
-    <div class="block left-module">
-        <h2 class="page-heading">
-            <span class="page-heading-title">Các chuyên mục</span>
+        <div class="block left-module">
+            <h2 class="page-heading">
+                <span class="page-heading-title">Các chuyên mục</span>
 
-        </h2>
-        <div class="block_content">
-            <!-- layered -->
+            </h2>
+            <div class="block_content">
+                <!-- layered -->
 
-            <div class="box-content box-category">
-                <ul>
-                    @foreach (BlogCategory item in categoryList)
-                    {
-                        <li><span></span><a href="@Anpero.StringHelpper.GetBlogCategoryLink(item.Name,item.Id)">@item.Name</a></li>
-                    }
-                </ul>
+                <div class="box-content box-category">
+                    <ul>
+                        @foreach (BlogCategory item in categoryList)
+                        {
+                            <li><span></span><a href="@Anpero.StringHelpper.GetBlogCategoryLink(item.Name,item.Id)">@item.Name</a></li>
+                        }
+                    </ul>
+                </div>
+                <!-- ./layered -->
             </div>
-            <!-- ./layered -->
         </div>
-    </div>
     }
     else
     {
@@ -52,13 +52,15 @@
             </div>
         </div>
     }
-
+    <div class="block left-module">
+        <a href="tel:0982921958"><img src="https://media.anpero.com/images/25/112018/22018112717124791.jpg" alt="liên hệ" /></a>
+    </div>
     <!-- ./blog category  -->
     <!-- Popular Posts -->
-    @if (TopArticle!=null && TopArticle.ItemList.Length > 0)
+    @if (TopArticle != null && TopArticle.ItemList.Length > 0)
     {
 
-        <div class="block left-module">            
+        <div class="block left-module">
             <h2 class="page-heading">
                 <span class="page-heading-title">Tin nổi bật</span>
 
@@ -94,77 +96,77 @@
 
         <!-- ./Popular Posts -->
         <!-- Banner -->
-            <div class="block left-module">
-                <div class="banner-opacity">
-                    <a href="@Anpero.StringHelpper.GetArticleLink(TopArticle.ItemList[TopArticle.ItemList.Length-1].Title,TopArticle.ItemList[TopArticle.ItemList.Length-1].Id)"><img src="@TopArticle.ItemList[TopArticle.ItemList.Length-1].Thumb" alt="@TopArticle.ItemList[TopArticle.ItemList.Length-1].Title"></a>
-                </div>
+        <div class="block left-module">
+            <div class="banner-opacity">
+                <a href="@Anpero.StringHelpper.GetArticleLink(TopArticle.ItemList[TopArticle.ItemList.Length-1].Title,TopArticle.ItemList[TopArticle.ItemList.Length-1].Id)"><img src="@TopArticle.ItemList[TopArticle.ItemList.Length-1].Thumb" alt="@TopArticle.ItemList[TopArticle.ItemList.Length-1].Title"></a>
             </div>
+        </div>
     }
     <!-- ./Banner -->
     @*<!-- Recent Comments -->
-    <div class="block left-module">
-        <p class="title_block">Recent Comments</p>
-        <div class="block_content">
-            <!-- layered -->
-            <div class="layered">
-                <div class="layered-content">
-                    <ul class="recent-comment-list">
-                        <li>
-                            <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
-                            <div class="comment">
-                                "Consectetuer adipis. Mauris accumsan nulla vel diam. Sed in..."
-                            </div>
-                            <div class="author">Posted by <a href="#">Admin</a></div>
-                        </li>
-                        <li>
-                            <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
-                            <div class="comment">
-                                "Consectetuer adipis. Mauris accumsan nulla vel diam. Sed in..."
-                            </div>
-                            <div class="author">Posted by <a href="#">Admin</a></div>
-                        </li>
-                        <li>
-                            <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
-                            <div class="comment">
-                                "Consectetuer adipis. Mauris accumsan nulla vel diam. Sed in..."
-                            </div>
-                            <div class="author">Posted by <a href="#">Admin</a></div>
-                        </li>
-                    </ul>
+        <div class="block left-module">
+            <p class="title_block">Recent Comments</p>
+            <div class="block_content">
+                <!-- layered -->
+                <div class="layered">
+                    <div class="layered-content">
+                        <ul class="recent-comment-list">
+                            <li>
+                                <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
+                                <div class="comment">
+                                    "Consectetuer adipis. Mauris accumsan nulla vel diam. Sed in..."
+                                </div>
+                                <div class="author">Posted by <a href="#">Admin</a></div>
+                            </li>
+                            <li>
+                                <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
+                                <div class="comment">
+                                    "Consectetuer adipis. Mauris accumsan nulla vel diam. Sed in..."
+                                </div>
+                                <div class="author">Posted by <a href="#">Admin</a></div>
+                            </li>
+                            <li>
+                                <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
+                                <div class="comment">
+                                    "Consectetuer adipis. Mauris accumsan nulla vel diam. Sed in..."
+                                </div>
+                                <div class="author">Posted by <a href="#">Admin</a></div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+                <!-- ./layered -->
             </div>
-            <!-- ./layered -->
         </div>
-    </div>
-    <!-- ./Recent Comments -->*@
+        <!-- ./Recent Comments -->*@
     <!-- tags -->
     @*<div class="block left-module">
-        <p class="title_block">TAGS</p>
-        <div class="block_content">
-            <div class="tags">
-                <a href="#"><span class="level1">actual</span></a>
-                <a href="#"><span class="level2">adorable</span></a>
-                <a href="#"><span class="level3">change</span></a>
-                <a href="#"><span class="level4">consider</span></a>
-                <a href="#"><span class="level3">phenomenon</span></a>
-                <a href="#"><span class="level4">span</span></a>
-                <a href="#"><span class="level1">spanegs</span></a>
-                <a href="#"><span class="level5">spanegs</span></a>
-                <a href="#"><span class="level1">actual</span></a>
-                <a href="#"><span class="level2">adorable</span></a>
-                <a href="#"><span class="level3">change</span></a>
-                <a href="#"><span class="level4">consider</span></a>
-                <a href="#"><span class="level2">gives</span></a>
-                <a href="#"><span class="level3">change</span></a>
-                <a href="#"><span class="level2">gives</span></a>
-                <a href="#"><span class="level1">good</span></a>
-                <a href="#"><span class="level3">phenomenon</span></a>
-                <a href="#"><span class="level4">span</span></a>
-                <a href="#"><span class="level1">spanegs</span></a>
-                <a href="#"><span class="level5">spanegs</span></a>
+            <p class="title_block">TAGS</p>
+            <div class="block_content">
+                <div class="tags">
+                    <a href="#"><span class="level1">actual</span></a>
+                    <a href="#"><span class="level2">adorable</span></a>
+                    <a href="#"><span class="level3">change</span></a>
+                    <a href="#"><span class="level4">consider</span></a>
+                    <a href="#"><span class="level3">phenomenon</span></a>
+                    <a href="#"><span class="level4">span</span></a>
+                    <a href="#"><span class="level1">spanegs</span></a>
+                    <a href="#"><span class="level5">spanegs</span></a>
+                    <a href="#"><span class="level1">actual</span></a>
+                    <a href="#"><span class="level2">adorable</span></a>
+                    <a href="#"><span class="level3">change</span></a>
+                    <a href="#"><span class="level4">consider</span></a>
+                    <a href="#"><span class="level2">gives</span></a>
+                    <a href="#"><span class="level3">change</span></a>
+                    <a href="#"><span class="level2">gives</span></a>
+                    <a href="#"><span class="level1">good</span></a>
+                    <a href="#"><span class="level3">phenomenon</span></a>
+                    <a href="#"><span class="level4">span</span></a>
+                    <a href="#"><span class="level1">spanegs</span></a>
+                    <a href="#"><span class="level5">spanegs</span></a>
+                </div>
             </div>
-        </div>
-    </div>*@
+        </div>*@
     <!-- ./tags -->
- 
+
 </div>
