--- a/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -9,7 +9,7 @@
 
 }
 
-<div class="block left-module side-nav-categories">    
+<div class="block left-module side-nav-categories" id="left-mn">    
     <h2 class="page-heading">
         <span class="page-heading-title">Danh mục sản phẩm</span>
 
